src/tui/views/snapshots/awsui__tui__views__secrets_detail__tests__render_returns_overview_snapshot_when_rendered.snap
---
source: src/tui/views/secrets_detail.rs
expression: buffer_to_string(&terminal)
---
┌ db-password ───────────────────────────────────────────── dev-account │ ap-northeast-1 ┐
│┌ Secret Details ──────────────────────────────────────────────────────────────────────┐│
││  KMS Key                                    Description   Database password for      ││
││arn:aws:kms:ap-northeast-1:123456789012:keyproduction                                 ││
││/my-key                                      Type          -                          ││
│└──────────────────────────────────────────────────────────────────────────────────────┘│
│ [Overview] [Rotation] [Versions] [Tags]                                                │
│┌ Secret Value ────────────────────────────────────────────────────────────────────────┐│
││  Press 'v' to retrieve and show secret value                                         ││
││                                                                                      ││
││                                                                                      ││
││                                                                                      ││
││                                                                                      ││
││                                                                                      ││
││                                                                                      ││
││                                                                                      ││
││                                                                                      ││
│└──────────────────────────────────────────────────────────────────────────────────────┘│
└────────────────────────────────────────────────────────────────────────────────────────┘
 [/]:switch-tab v:show/hide-value y:copy-arn Esc:back
