src/tui/views/snapshots/awsui__tui__views__secrets_detail__tests__render_returns_tags_snapshot_when_tags_tab.snap
---
source: src/tui/views/secrets_detail.rs
expression: buffer_to_string(&terminal)
---
┌ db-password ───────────────────────────────────────────── dev-account │ ap-northeast-1 ┐
│┌ Secret Details ──────────────────────────────────────────────────────────────────────┐│
││  KMS Key                                    Description   Database password for      ││
││arn:aws:kms:ap-northeast-1:123456789012:keyproduction                                 ││
││/my-key                                      Type          -                          ││
│└──────────────────────────────────────────────────────────────────────────────────────┘│
│ [Overview] [Rotation] [Versions] [Tags]                                                │
│Key                        Value                                                        │
│env                        production                                                   │
│team                       backend                                                      │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
 [/]:switch-tab y:copy-value Esc:back
